--- a/index.html
+++ b/index.html
@@ -209,6 +209,256 @@
       </div>
     </div>
 
+    <div class="about">
+      <div class="about-text">
+        <label>ABOUT US <span>OUR COMPANY</span></label>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat. Duis aute irure dolor in
+          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+          culpa qui officia deserunt mollit ani
+        </p>
+      </div>
+
+      <div class="about-img"></div>
+    </div>
+
+    <div class="services">
+      <div class="first-service">
+        <div class="strong-security">
+          <i class="fa-solid fa-shield-halved"></i>
+          <label>STRONG SECURITY</label>
+          <P>ipsum dolor sit amet, consectetur adipiscing elit, sed do</P>
+        </div>
+
+        <div class="world-coverage">
+          <i class="fa-solid fa-globe"></i>
+          <label>WORLD COVERAGE</label>
+          <p>ipsum dolor sit amet, consectetur adipiscing elit, sed do</p>
+        </div>
+      </div>
+
+      <div class="second-service">
+        <label>OUR <span>SERVICES</span></label>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod
+        </p>
+        <div class="services-iframe">
+          <iframe
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/XzKbTtFhJ8M"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+        </div>
+      </div>
+    </div>
+
+    <div class="team">
+
+      <div class="team-text">
+        <label>OUR <span>TEAM</span></label>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod</p>
+      </div>
+
+      <div class="team-members">
+        <div class="team-card">
+          <div class="team-img1">
+
+          </div>
+          <div class="team-info">
+            <label>BIZ ORIGIN</label>
+            <small>Ceo Founder</small>
+            <p>exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor</p>
+            <div class="team-social">
+
+              <a href="https://www.facebook.com" target="_blank">
+              <div class="social-i">
+                <i class="fa-brands fa-facebook-f"></i>
+              </div>
+              </a>
+
+              <a href="https://www.twitter.com/" target="_blank">
+              <div class="social-i">
+                <i class="fa-brands fa-twitter"></i>
+              </div>
+              </a>
+
+              <a href="https://www.linkedin.com/" target="_blank">
+              <div class="social-i">
+                <i class="fa-brands fa-linkedin-in"></i>
+              </div>
+              </a>
+
+              <a href="https://www.instagram.com" target="_blank">
+              <div class="social-i">
+                <i class="fa-brands fa-instagram"></i>
+              </div>
+              </a>
+            </div>
+
+          </div>
+
+        </div>
+
+        <div class="team-card">
+          <div class="team-img2">
+
+          </div>
+          <div class="team-info">
+             <label>LINA MARZOUKI</label>
+            <small>Crypto Director</small>
+            <p>exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor</p>
+            <div class="team-social">
+
+              <a href="https://www.facebook.com" target="_blank">
+              <div class="social-i">
+                <i class="fa-brands fa-facebook-f"></i>
+              </div>
+              </a>
+
+              <a href="https://www.twitter.com/" target="_blank">
+              <div class="social-i">
+                <i class="fa-brands fa-twitter"></i>
+              </div>
+              </a>
+
+              <a href="https://www.linkedin.com/" target="_blank">
+              <div class="social-i">
+                <i class="fa-brands fa-linkedin-in"></i>
+              </div>
+              </a>
+
+              <a href="https://www.instagram.com" target="_blank">
+              <div class="social-i">
+                <i class="fa-brands fa-instagram"></i>
+              </div>
+              </a>
+            </div>
+
+          </div>
+
+        </div>
+
+        <div class="team-card">
+          <div class="team-img3">
+
+          </div>
+          <div class="team-info">
+             <label>ANTONIO CONTE</label>
+            <small>Tech Manager</small>
+            <p>exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor</p>
+            <div class="team-social">
+
+              <a href="https://www.facebook.com" target="_blank">
+              <div class="social-i">
+                <i class="fa-brands fa-facebook-f"></i>
+              </div>
+              </a>
+
+              <a href="https://www.twitter.com/" target="_blank">
+              <div class="social-i">
+                <i class="fa-brands fa-twitter"></i>
+              </div>
+              </a>
+
+              <a href="https://www.linkedin.com/" target="_blank">
+              <div class="social-i">
+                <i class="fa-brands fa-linkedin-in"></i>
+              </div>
+              </a>
+
+              <a href="https://www.instagram.com" target="_blank">
+              <div class="social-i">
+                <i class="fa-brands fa-instagram"></i>
+              </div>
+              </a>
+            </div>
+
+          </div>
+
+        </div>
+      </div>
+    </div>
+
+    <div class="contactus">
+      <div class="contact-form">
+        <label>Request A Call</label>
+        <div class="contact-input">
+
+          <input type="text" placeholder="Name">
+          <input type="text" placeholder="Phone">
+          <input type="email" placeholder="Email">
+          <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+          <button>Send</button>
+        </div>
+      </div>
+
+      <div class="request">
+        <div class="request-container">
+          <label>GET STARTED TODAY WIDH DIGITAL MONEY BITCON</label>
+          <p>consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim</p>
+          <button>Register Now</button>
+        </div>
+
+      </div>
+    </div>
+
+    <div class="footer-three">
+      <div class="contact-three">
+        <label>CONTACT US</label>
+        <div class="contact-three-container">
+          <div class="contact-three-link">
+            <a href="https://goo.gl/maps/5iqXqCCKt4ZUnRqd8" target="_blank"><i class="fa-solid fa-location-dot"></i></a>
+          </div>
+          <div class="contact-three-link">
+            <a href="tel:+2349060662902" target="_blank"><i class="fa-solid fa-phone"></i></a>
+          </div>
+          <div class="contact-three-link">
+            <a href="mailto:biz167aa@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i></a>
+          </div>
+        </div>
+
+      </div>
+
+      <div class="social-three">
+        <label>SOCIAL LINKS</label>
+        <div class="social-three-container">
+          <div class="social-three-link">
+           <a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook-f"></i></a> 
+          </div>
+          <div class="social-three-link">
+            <a href="https://www.twitter.com" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+          </div>
+          <div class="social-three-link">
+            <a href="https://www.linkedin.com" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+          </div>
+          <div class="social-three-link">
+            <a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+          </div>
+        </div>
+      </div>
+
+      <div class="news-three">
+        <label>NEWSLETTER</label>
+        <div class="news-three-container">
+          <input type="email" placeholder="Enter your Email">
+          <button>SUBSCRIBE</button>
+        </div>
+
+      </div>
+    </div>
+
+    <div class="copyright">
+      <label>&#169; Copyright 2022 All Right Reserved By BIZ ORIGIN</label>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
