--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <div class="carousel-item active">
             <img
               src="pictures/experts-1.jpg"
-              class="d-block w-100"
+              class="d-block"
               alt="Slide 1"
             />
             <div class="carousel-caption d-none d-md-block">
@@ -94,7 +94,7 @@
           <div class="carousel-item">
             <img
               src="pictures/experts-2.jpg"
-              class="d-block w-100"
+              class="d-block"
               alt="Slide 2"
             />
             <div class="carousel-caption d-none d-md-block">
@@ -107,7 +107,7 @@
           <div class="carousel-item">
             <img
               src="pictures/experts-3.jpg"
-              class="d-block w-100"
+              class="d-block"
               alt="Slide 3"
             />
             <div class="carousel-caption d-none d-md-block">
@@ -223,7 +223,9 @@
         </p>
       </div>
 
-      <div class="about-img"></div>
+      <div class="about-img">
+        <img src="pictures/about.png" alt="Not Found">
+      </div>
     </div>
 
     <div class="services">
@@ -432,7 +434,7 @@
         <label>SOCIAL LINKS</label>
         <div class="social-three-container">
           <div class="social-three-link">
-           <a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook-f"></i></a> 
+           <a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
           </div>
           <div class="social-three-link">
             <a href="https://www.twitter.com" target="_blank"><i class="fa-brands fa-twitter"></i></a>
