--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
               class="d-block"
               alt="Slide 1"
             />
-            <div class="carousel-caption d-none d-md-block">
+            <div class="carousel-caption">
               <h5>First slide label</h5>
               <p>
                 Some representative placeholder content for the first slide.
@@ -97,7 +97,7 @@
               class="d-block"
               alt="Slide 2"
             />
-            <div class="carousel-caption d-none d-md-block">
+            <div class="carousel-caption">
               <h5>Second slide label</h5>
               <p>
                 Some representative placeholder content for the second slide.
@@ -110,7 +110,7 @@
               class="d-block"
               alt="Slide 3"
             />
-            <div class="carousel-caption d-none d-md-block">
+            <div class="carousel-caption">
               <h5>Third slide label</h5>
               <p>
                 Some representative placeholder content for the third slide.
