--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
 
     <header>
       <img src="pictures/logo.jpg" alt="Not Found" />
+      <div class="mysocial">
+        <i class="fa-brands fa-facebook-f"></i>
+        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-linkedin-in"></i>
+        <i class="fa-brands fa-google-plus-g"></i>
+      </div>
       <nav>
         <a href="index.html">Home</a>
         <a href="#">About</a>
