--- a/index.html
+++ b/index.html
@@ -38,12 +38,7 @@
 
     <header>
       <img src="pictures/logo.jpg" alt="Not Found" />
-      <div class="mysocial">
-        <i class="fa-brands fa-facebook-f"></i>
-        <i class="fa-brands fa-twitter"></i>
-        <i class="fa-brands fa-linkedin-in"></i>
-        <i class="fa-brands fa-google-plus-g"></i>
-      </div>
+
       <nav>
         <a href="index.html">Home</a>
         <a href="#">About</a>
@@ -54,6 +49,22 @@
         <i class="fa-solid fa-bars"></i>
       </nav>
     </header>
+
+    <nav class="sidebar hide">
+      <div class="sidebar-container">
+        <a href="index.html"><i class="fa-solid fa-house"></i>&nbsp;Home</a>
+        <a href="#"><i class="fa-solid fa-circle-info"></i>&nbsp;About</a>
+        <a href="#"><i class="fa-brands fa-gg-circle"></i>&nbsp;Currency</a>
+        <a href="#"><i class="fa-solid fa-people-group"></i>&nbsp;Team</a>
+        <a href="#"><i class="fa-brands fa-teamspeak"></i>&nbsp;Contact us</a>
+      </div>
+      <div class="mysocial">
+      <i class="fa-brands fa-facebook-f"></i>
+      <i class="fa-brands fa-twitter"></i>
+      <i class="fa-brands fa-linkedin-in"></i>
+      <i class="fa-brands fa-google-plus-g"></i>
+    </div>
+    </nav>
 
     <div class="banner">
       <div
@@ -85,11 +96,7 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img
-              src="pictures/experts-1.jpg"
-              class="d-block"
-              alt="Slide 1"
-            />
+            <img src="pictures/experts-1.jpg" class="d-block" alt="Slide 1" />
             <div class="carousel-caption">
               <h5>First slide label</h5>
               <p>
@@ -98,11 +105,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img
-              src="pictures/experts-2.jpg"
-              class="d-block"
-              alt="Slide 2"
-            />
+            <img src="pictures/experts-2.jpg" class="d-block" alt="Slide 2" />
             <div class="carousel-caption">
               <h5>Second slide label</h5>
               <p>
@@ -111,11 +114,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img
-              src="pictures/experts-3.jpg"
-              class="d-block"
-              alt="Slide 3"
-            />
+            <img src="pictures/experts-3.jpg" class="d-block" alt="Slide 3" />
             <div class="carousel-caption">
               <h5>Third slide label</h5>
               <p>
@@ -230,7 +229,7 @@
       </div>
 
       <div class="about-img">
-        <img src="pictures/about.png" alt="Not Found">
+        <img src="pictures/about.png" alt="Not Found" />
       </div>
     </div>
 
@@ -239,7 +238,7 @@
         <div class="strong-security">
           <i class="fa-solid fa-shield-halved"></i>
           <label>STRONG SECURITY</label>
-          <P>ipsum dolor sit amet, consectetur adipiscing elit, sed do</P>
+          <p>ipsum dolor sit amet, consectetur adipiscing elit, sed do</p>
         </div>
 
         <div class="world-coverage">
@@ -270,128 +269,124 @@
     </div>
 
     <div class="team">
-
       <div class="team-text">
         <label>OUR <span>TEAM</span></label>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod</p>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod
+        </p>
       </div>
 
       <div class="team-members">
         <div class="team-card">
-          <div class="team-img1">
-
-          </div>
+          <div class="team-img1"></div>
           <div class="team-info">
             <label>BIZ ORIGIN</label>
             <small>Ceo Founder</small>
-            <p>exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor</p>
+            <p>
+              exercitation ullamco laboris nisi ut aliquip ex ea commodo
+              consequat. Duis aute irure dolor
+            </p>
             <div class="team-social">
-
               <a href="https://www.facebook.com" target="_blank">
-              <div class="social-i">
-                <i class="fa-brands fa-facebook-f"></i>
-              </div>
+                <div class="social-i">
+                  <i class="fa-brands fa-facebook-f"></i>
+                </div>
               </a>
 
               <a href="https://www.twitter.com/" target="_blank">
-              <div class="social-i">
-                <i class="fa-brands fa-twitter"></i>
-              </div>
+                <div class="social-i">
+                  <i class="fa-brands fa-twitter"></i>
+                </div>
               </a>
 
               <a href="https://www.linkedin.com/" target="_blank">
-              <div class="social-i">
-                <i class="fa-brands fa-linkedin-in"></i>
-              </div>
+                <div class="social-i">
+                  <i class="fa-brands fa-linkedin-in"></i>
+                </div>
               </a>
 
               <a href="https://www.instagram.com" target="_blank">
-              <div class="social-i">
-                <i class="fa-brands fa-instagram"></i>
-              </div>
+                <div class="social-i">
+                  <i class="fa-brands fa-instagram"></i>
+                </div>
               </a>
             </div>
-
           </div>
-
         </div>
 
         <div class="team-card">
-          <div class="team-img2">
-
-          </div>
+          <div class="team-img2"></div>
           <div class="team-info">
-             <label>LINA MARZOUKI</label>
+            <label>LINA MARZOUKI</label>
             <small>Crypto Director</small>
-            <p>exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor</p>
+            <p>
+              exercitation ullamco laboris nisi ut aliquip ex ea commodo
+              consequat. Duis aute irure dolor
+            </p>
             <div class="team-social">
-
               <a href="https://www.facebook.com" target="_blank">
-              <div class="social-i">
-                <i class="fa-brands fa-facebook-f"></i>
-              </div>
+                <div class="social-i">
+                  <i class="fa-brands fa-facebook-f"></i>
+                </div>
               </a>
 
               <a href="https://www.twitter.com/" target="_blank">
-              <div class="social-i">
-                <i class="fa-brands fa-twitter"></i>
-              </div>
+                <div class="social-i">
+                  <i class="fa-brands fa-twitter"></i>
+                </div>
               </a>
 
               <a href="https://www.linkedin.com/" target="_blank">
-              <div class="social-i">
-                <i class="fa-brands fa-linkedin-in"></i>
-              </div>
+                <div class="social-i">
+                  <i class="fa-brands fa-linkedin-in"></i>
+                </div>
               </a>
 
               <a href="https://www.instagram.com" target="_blank">
-              <div class="social-i">
-                <i class="fa-brands fa-instagram"></i>
-              </div>
+                <div class="social-i">
+                  <i class="fa-brands fa-instagram"></i>
+                </div>
               </a>
             </div>
-
           </div>
-
         </div>
 
         <div class="team-card">
-          <div class="team-img3">
-
-          </div>
+          <div class="team-img3"></div>
           <div class="team-info">
-             <label>ANTONIO CONTE</label>
+            <label>ANTONIO CONTE</label>
             <small>Tech Manager</small>
-            <p>exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor</p>
+            <p>
+              exercitation ullamco laboris nisi ut aliquip ex ea commodo
+              consequat. Duis aute irure dolor
+            </p>
             <div class="team-social">
-
               <a href="https://www.facebook.com" target="_blank">
-              <div class="social-i">
-                <i class="fa-brands fa-facebook-f"></i>
-              </div>
+                <div class="social-i">
+                  <i class="fa-brands fa-facebook-f"></i>
+                </div>
               </a>
 
               <a href="https://www.twitter.com/" target="_blank">
-              <div class="social-i">
-                <i class="fa-brands fa-twitter"></i>
-              </div>
+                <div class="social-i">
+                  <i class="fa-brands fa-twitter"></i>
+                </div>
               </a>
 
               <a href="https://www.linkedin.com/" target="_blank">
-              <div class="social-i">
-                <i class="fa-brands fa-linkedin-in"></i>
-              </div>
+                <div class="social-i">
+                  <i class="fa-brands fa-linkedin-in"></i>
+                </div>
               </a>
 
               <a href="https://www.instagram.com" target="_blank">
-              <div class="social-i">
-                <i class="fa-brands fa-instagram"></i>
-              </div>
+                <div class="social-i">
+                  <i class="fa-brands fa-instagram"></i>
+                </div>
               </a>
             </div>
-
           </div>
-
         </div>
       </div>
     </div>
@@ -400,11 +395,16 @@
       <div class="contact-form">
         <label>Request A Call</label>
         <div class="contact-input">
-
-          <input type="text" placeholder="Name">
-          <input type="text" placeholder="Phone">
-          <input type="email" placeholder="Email">
-          <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+          <input type="text" placeholder="Name" />
+          <input type="text" placeholder="Phone" />
+          <input type="email" placeholder="Email" />
+          <textarea
+            name=""
+            id=""
+            cols="30"
+            rows="10"
+            placeholder="Message"
+          ></textarea>
           <button>Send</button>
         </div>
       </div>
@@ -412,10 +412,12 @@
       <div class="request">
         <div class="request-container">
           <label>GET STARTED TODAY WIDH DIGITAL MONEY BITCON</label>
-          <p>consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim</p>
+          <p>
+            consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+            labore et dolore magna aliqua. Ut enim
+          </p>
           <button>Register Now</button>
         </div>
-
       </div>
     </div>
 
@@ -424,32 +426,45 @@
         <label>CONTACT US</label>
         <div class="contact-three-container">
           <div class="contact-three-link">
-            <a href="https://goo.gl/maps/5iqXqCCKt4ZUnRqd8" target="_blank"><i class="fa-solid fa-location-dot"></i></a>
+            <a href="https://goo.gl/maps/5iqXqCCKt4ZUnRqd8" target="_blank"
+              ><i class="fa-solid fa-location-dot"></i
+            ></a>
           </div>
           <div class="contact-three-link">
-            <a href="tel:+2349060662902" target="_blank"><i class="fa-solid fa-phone"></i></a>
+            <a href="tel:+2349060662902" target="_blank"
+              ><i class="fa-solid fa-phone"></i
+            ></a>
           </div>
           <div class="contact-three-link">
-            <a href="mailto:biz167aa@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i></a>
+            <a href="mailto:biz167aa@gmail.com" target="_blank"
+              ><i class="fa-solid fa-envelope"></i
+            ></a>
           </div>
         </div>
-
       </div>
 
       <div class="social-three">
         <label>SOCIAL LINKS</label>
         <div class="social-three-container">
           <div class="social-three-link">
-           <a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
+            <a href="https://www.facebook.com" target="_blank"
+              ><i class="fa-brands fa-facebook-f"></i
+            ></a>
           </div>
           <div class="social-three-link">
-            <a href="https://www.twitter.com" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+            <a href="https://www.twitter.com" target="_blank"
+              ><i class="fa-brands fa-twitter"></i
+            ></a>
           </div>
           <div class="social-three-link">
-            <a href="https://www.linkedin.com" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+            <a href="https://www.linkedin.com" target="_blank"
+              ><i class="fa-brands fa-linkedin-in"></i
+            ></a>
           </div>
           <div class="social-three-link">
-            <a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.instagram.com" target="_blank"
+              ><i class="fa-brands fa-instagram"></i
+            ></a>
           </div>
         </div>
       </div>
@@ -457,10 +472,9 @@
       <div class="news-three">
         <label>NEWSLETTER</label>
         <div class="news-three-container">
-          <input type="email" placeholder="Enter your Email">
+          <input type="email" placeholder="Enter your Email" />
           <button>SUBSCRIBE</button>
         </div>
-
       </div>
     </div>
 
@@ -472,5 +486,7 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
+
+    <script src="script.js"></script>
   </body>
 </html>
