--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
 
     <header>
-      <img src="pictures/logo.jpg" alt="Not Found" />
+      <img src="pictures/digitco.svg" alt="Not Found" />
 
       <nav>
         <a href="index.html">Home</a>
