--- a/aboutus.html
+++ b/aboutus.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="media.css" />
 
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="alt.css">
     <title>DigitCo</title>
   </head>
   <body>
@@ -65,6 +66,9 @@
       <i class="fa-brands fa-google-plus-g"></i>
     </div>
     </nav>
+    <div class="header-space">
+
+    </div>
 
 
     <div class="about">
