--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
         <a href="contact.html"><i class="fa-brands fa-teamspeak"></i>&nbsp;Contact us</a>
       </div>
       <div class="mysocial">
-      <i class="fa-brands fa-facebook-f"></i>
-      <i class="fa-brands fa-twitter"></i>
-      <i class="fa-brands fa-linkedin-in"></i>
-      <i class="fa-brands fa-google-plus-g"></i>
+      <a href="http://www.facebook.com"><i class="fa-brands fa-facebook-f"></i></a>
+      <a href="http://www.twitter.com"><i class="fa-brands fa-twitter"></i></a>
+      <a href="http://www.linkedin.com"><i class="fa-brands fa-linkedin-in"></i></a>
+      <a href="http://www.gmail.com"><i class="fa-brands fa-google-plus-g"></i></a>
     </div>
     </nav>
 
