--- a/aboutus.html
+++ b/aboutus.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <link rel="icon" type="image/png" href="pictures/favicon.png" sizes="32x32">
+
     <script
       src="https://kit.fontawesome.com/8a144fbcd5.js"
       crossorigin="anonymous"
@@ -20,7 +22,7 @@
     <link rel="stylesheet" href="media.css" />
 
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="alt.css">
+    <link rel="stylesheet" href="alt.css" />
     <title>DigitCo</title>
   </head>
   <body>
@@ -28,17 +30,25 @@
       <label>Email: biz167aa@gmail.com</label>
 
       <div class="details-container">
-        <i class="fa-brands fa-facebook-f"></i>
-        <i class="fa-brands fa-twitter"></i>
-        <i class="fa-brands fa-linkedin-in"></i>
-        <i class="fa-brands fa-google-plus-g"></i>
+        <a href="https://www.facebook.com"
+          ><i class="fa-brands fa-facebook-f"></i
+        ></a>
+        <a href="https://www.twitter.com"
+          ><i class="fa-brands fa-twitter"></i
+        ></a>
+        <a href="https://www.linkedin.com"
+          ><i class="fa-brands fa-linkedin-in"></i
+        ></a>
+        <a href="https://www.gmail.com"
+          ><i class="fa-brands fa-google-plus-g"></i
+        ></a>
       </div>
 
       <label>Contact: +2349056766747</label>
     </div>
 
     <header>
-      <img src="pictures/digitco.svg" alt="Not Found" />
+      <img src="pictures/digitco.png" alt="Not Found" />
 
       <nav>
         <a href="index.html">Home</a>
@@ -54,22 +64,35 @@
     <nav class="sidebar hide">
       <div class="sidebar-container">
         <a href="index.html"><i class="fa-solid fa-house"></i>&nbsp;Home</a>
-        <a href="aboutus.html"><i class="fa-solid fa-circle-info"></i>&nbsp;About</a>
-        <a href="currency.html"><i class="fa-brands fa-gg-circle"></i>&nbsp;Currency</a>
-        <a href="team.html"><i class="fa-solid fa-people-group"></i>&nbsp;Team</a>
-        <a href="contact.html"><i class="fa-brands fa-teamspeak"></i>&nbsp;Contact us</a>
+        <a href="aboutus.html"
+          ><i class="fa-solid fa-circle-info"></i>&nbsp;About</a
+        >
+        <a href="currency.html"
+          ><i class="fa-brands fa-gg-circle"></i>&nbsp;Currency</a
+        >
+        <a href="team.html"
+          ><i class="fa-solid fa-people-group"></i>&nbsp;Team</a
+        >
+        <a href="contact.html"
+          ><i class="fa-brands fa-teamspeak"></i>&nbsp;Contact us</a
+        >
       </div>
       <div class="mysocial">
-      <a href="http://www.facebook.com"><i class="fa-brands fa-facebook-f"></i></a>
-      <a href="http://www.twitter.com"><i class="fa-brands fa-twitter"></i></a>
-      <a href="http://www.linkedin.com"><i class="fa-brands fa-linkedin-in"></i></a>
-      <a href="http://www.gmail.com"><i class="fa-brands fa-google-plus-g"></i></a>
-    </div>
+        <a href="https://www.facebook.com"
+          ><i class="fa-brands fa-facebook-f"></i
+        ></a>
+        <a href="https://www.twitter.com"
+          ><i class="fa-brands fa-twitter"></i
+        ></a>
+        <a href="https://www.linkedin.com"
+          ><i class="fa-brands fa-linkedin-in"></i
+        ></a>
+        <a href="https://www.gmail.com"
+          ><i class="fa-brands fa-google-plus-g"></i
+        ></a>
+      </div>
     </nav>
-    <div class="header-space">
-
-    </div>
-
+    <div class="header-space"></div>
 
     <div class="about">
       <div class="about-text">
