--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <link rel="icon" type="image/png" href="pictures/favicon.png" sizes="32x32">
+
     <script
       src="https://kit.fontawesome.com/8a144fbcd5.js"
       crossorigin="anonymous"
@@ -29,17 +31,25 @@
       <label>Email: biz167aa@gmail.com</label>
 
       <div class="details-container">
-        <i class="fa-brands fa-facebook-f"></i>
-        <i class="fa-brands fa-twitter"></i>
-        <i class="fa-brands fa-linkedin-in"></i>
-        <i class="fa-brands fa-google-plus-g"></i>
+        <a href="https://www.facebook.com"
+          ><i class="fa-brands fa-facebook-f"></i
+        ></a>
+        <a href="https://www.twitter.com"
+          ><i class="fa-brands fa-twitter"></i
+        ></a>
+        <a href="https://www.linkedin.com"
+          ><i class="fa-brands fa-linkedin-in"></i
+        ></a>
+        <a href="https://www.gmail.com"
+          ><i class="fa-brands fa-google-plus-g"></i
+        ></a>
       </div>
 
       <label>Contact: +2349056766747</label>
     </div>
 
     <header>
-      <img src="pictures/digitco.svg" alt="Not Found" />
+      <img src="pictures/digitco.png" alt="Not Found" />
 
       <nav>
         <a href="index.html">Home</a>
